[project]
name = "abi-extraction-wallet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.2.0",
    "pillow>=12.2.0",
    "rembg[cpu]>=2.0.75",
    "st-supabase-connection>=2.1.3",
    "streamlit>=1.57.0",
    "streamlit-local-storage>=0.0.25",
]
